config generale mac & win